# auto_tool_agent

./: .env-gdc  .gitignore  .pre-commit-config.yaml  .pylintrc  CONVENTIONS.md  Makefile  README.md  agent-demo.tape  data.markdown  pyproject.toml  pyrightconfig.json
old_code/: console_test.py
sandbox_init/: .gitignore  pyproject.toml
sandbox_init/src/sandbox/: __init__.py  __main__.py  graph_shared.py  graph_state.py  opts.py  tool_data.py
sandbox_init/src/sandbox/ai_tools/: __init__.py
sandbox_init/src/sandbox/ai_tools_metadata/: __init__.py
sandbox_init/src/sandbox/data/: __init__.py
sandbox_init/src/sandbox/lib/: folder_monitor.py  llm_config.py  llm_providers.py  module_loader.py  output_utils.py
sandbox_init/src/sandbox/tools/: __init__.py  get_env_vars.py  get_now.py  search_web.py
src/auto_tool_agent/: .gitignore  __init__.py  __main__.py  ai_tools.py  app_logging.py  folder_monitor.py  graph_agent.py  graph_state.py  module_loader.py  opts.py  sandboxing.py  session.py  tool_data.py  tool_funcs.py  tool_maker.py
src/auto_tool_agent/dotenv/: __init__.py  main.py  parser.py  variables.py
src/auto_tool_agent/graph/: graph_agent.py  graph_code.py  graph_output.py  graph_planner.py  graph_results.py  graph_sandbox.py  graph_shared.py  graph_state.py
src/auto_tool_agent/lib/: execute_command.py  folder_monitor.py  llm_config.py  llm_providers.py  llm_utils.py  module_loader.py  output_utils.py  par_ollama_embeddings.py  search_utils.py  session.py  utils.py
src/auto_tool_agent/sandbox/tools_tests/: get_now.py  list_ec2_instances.py  list_lambda_functions.py  list_s3_buckets.py  list_s3_buckets_and_storage_class.py  list_s3_buckets_in_regions.py  list_vpcs_and_subnets.py
src/auto_tool_agent/system_prompts/: aws.md  generic.md
src/auto_tool_agent/tools/: get_now.py  list_s3_buckets_and_storage_class.py
src/auto_tool_agent/tui/: code_review.py
src/auto_tool_agent/tui/dialogs/: __init__.py  yes_no_dialog.py
tool_archive/: fetch_hacker_news_top_articles.py  list_lambda_functions.py  list_rds_instances_and_clusters.py  list_s3_buckets.py  list_s3_buckets_and_storage_class.py  list_s3_buckets_with_sizes_and_counts.py
