[project]
name = "auto_tool_agent"
version = "0.1.0"
description = "AI Agent that can create its own tools"
url = "https://github.com/paulrobello/auto_tool_agent"
authors = [{ name = "Paul Robello", email = "probello@gmail.com" }]
maintainers = [{ name = "Paul Robello", email = "probello@gmail.com" }]
keywords = ["ai", "terminal"]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]

dependencies = [
    "argparse>=1.4.0",
    "asyncio>=3.4.3",
    "attrs>=24.2.0",
    "beautifulsoup4>=4.12.3",
    "black>=24.8.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "docker>=7.1.0",
    "gitpython>=3.1.43",
    "html2markdown>=0.1.7",
    "html2text>=2024.2.26",
    "httpx>=0.27.0",
    "humanize>=4.10.0",
    "isodate2>=0.9.0",
    "keyboard>=0.13.5",
    "langchain-anthropic>=0.1.23",
    "langchain-aws>=0.1.18",
    "langchain-community>=0.2.12",
    "langchain-core>=0.2.34",
    "langchain-experimental>=0.0.65",
    "langchain-google-genai>=1.0.10",
    "langchain-groq>=0.1.9",
    "langchain-ollama>=0.1.1",
    "langchain-openai>=0.1.22",
    "langchain-text-splitters>=0.2.2",
    "langchain>=0.2.14",
    "langchainhub>=0.1.21",
    "langgraph>=0.2.14",
    "langsmith>=0.1.104",
    "markdownify>=0.13.1",
    "ollama>=0.3.1",
    "openai>=1.42.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-core>=2.20.1",
    "pydantic-settings>=2.4.0",
    "pydantic>=2.8.2",
    "pypdf>=4.3.1",
    "pyperclip>=1.9.0",
    "pytest>=8.3.2",
    "python-dotenv>=1.0.1",
    "python-env>=1.0.0",
    "pytz>=2024.1",
    "requests>=2.32.3",
    "rich>=13.7.1",
    "sentence-transformers>=3.0.1",
    "simplejson>=3.19.3",
    "sqlalchemy>=2.0.32",
    "textual[syntax]>=0.83.0",
    "tokenizers>=0.19.1",
    "tomlkit>=0.13.2",
    "transformers>=4.44.2",
    "typing-extensions>=4.12.2",
    "urllib3>=2.2.2",
    "watchdog>=4.0.2",
]

packages = [
    "src/auto_tool_agent",
]

[project.urls]
Homepage = "https://github.com/paulrobello/auto_tool_agent"
Documentation = "https://github.com/paulrobello/auto_tool_agent/blob/main/README.md"
Repository = "https://github.com/paulrobello/auto_tool_agent"
Issues = "https://github.com/paulrobello/auto_tool_agent/issues"
Discussions = "https://github.com/paulrobello/auto_tool_agent/discussions"
Wiki = "https://github.com/paulrobello/auto_tool_agent/wiki"

[project.scripts]
auto_tool_agent = "auto_tool_agent.__main__:main"

[tool.setuptools.package-data]
auto_tool_agent = [
    "py.typed",
    "*/*.png",
    "*/*.md",
    "*/*.tcss",
    "*.png",
    "*.md",
    "*.tcss"
]

[build-system]
requires = ["hatchling", "wheel"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "build>=1.2.1",
    "twine>=5.1.1",
    "black>=24.8.0",
    "pyright>=1.1.379",
    "pre-commit>=3.8.0",
    "ruff>=0.7.1",
]

[tool.hatch.version]
path = "src/auto_tool_agent/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_tool_agent"]
include = [
    "*.py",
    "py.typed",
    "*.png",
    "*.md",
    "*.tcss",
    "*.png",
    "*.md",
    "*.tcss"
]

[tool.hatch.build.targets.sdist]
include = [
    "src/auto_tool_agent",
    "LICENSE",
    "README.md",
    "extraction_prompt.md",
    "pyproject.toml"
]
exclude = [
    "*.pyc",
    "__pycache__",
    "*.so",
    "*.dylib"
]
